--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Mid-11/">https://baay22.github.io/Mid-11/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Midstream+Marketing/Mid-11/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Midstream+Marketing/Mid-11/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Midstream+Marketing/Mid-11/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Midstream+Marketing/Mid-11/index.html</a><br>
+                <a target="_bLank" href="https://stupendous-gaufre-3dbaf9.netlify.app">https://stupendous-gaufre-3dbaf9.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
